BIG REFACTOR OF VIEWS.

--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -299,7 +299,7 @@
             </div>
             <div id="cyt-controls-header">
                 <div class="back-div">
-                    <a href="{% url 'index_view' %}" class="info-tooltip"
+                    <a href="{% url 'index' %}" class="info-tooltip"
                     title="Back to PlanNET"><span class="glyphicon glyphicon-home"></span></a>
                     <hr>
                     <a target="_blank" href="{% url 'tutorial' %}#netexplorer" class="info-tooltip"
