--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -39,7 +39,7 @@
                 <div id="logo-container">
                     <div class="row row-eq-height">
                         <div class="col-sm-8">
-                            <a href="{% url 'index_view' %}"> <img id="logoheader" src="{% static 'Images/logo-new-version2.png' %}"/> </a>
+                            <a href="{% url 'index' %}"> <img id="logoheader" src="{% static 'Images/logo-new-version2.png' %}"/> </a>
                         </div>
                         <div class="col-sm-4 company-logo-container-parent">
                             <div class="company-logo-container">
@@ -53,7 +53,7 @@
                 <nav class="navbar navbar-plannet">
                     <div class="container-fluid">
                         <ul class="nav navbar-nav">
-                            <li id="navbar-home"><a href="{% url 'index_view' %}">Home</a></li>
+                            <li id="navbar-home"><a href="{% url 'index' %}">Home</a></li>
                             <li id="navbar-tutorial"><a href="{% url 'tutorial' %}">Tutorial</a></li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tools
