--- a/NetExplorer/templates/NetExplorer/pathway_finder.html
+++ b/NetExplorer/templates/NetExplorer/pathway_finder.html
@@ -224,7 +224,7 @@
             </div>
             <div id="pfind-form-header">
                 <div class="back-div">
-                    <a href="{% url 'index_view' %}" class="info-tooltip"
+                    <a href="{% url 'index' %}" class="info-tooltip"
                     title="Back to PlanNET"><span class="glyphicon glyphicon-home"></span></a>
                     <hr>
                     <a target="_blank" href="{% url 'tutorial' %}#pathwayfinder" class="info-tooltip"
