--- a/NetExplorer/templates/NetExplorer/tutorial.html
+++ b/NetExplorer/templates/NetExplorer/tutorial.html
@@ -15,7 +15,7 @@
             <li><a href="#pathwayfinder">Pathway Finder</a></li>
             <li><a href="#planexp">PlanExp</a></li>
             <hr>
-            <li id="back_home"><a href="{% url 'index_view' %}" ><span class="glyphicon glyphicon-triangle-left"></span>Go back Home</a></li>
+            <li id="back_home"><a href="{% url 'index' %}" ><span class="glyphicon glyphicon-triangle-left"></span>Go back Home</a></li>
         </ul>
     </nav>
 
