--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2128,6 +2128,7 @@ kbd {
 #planexp-dge-table           { display: none; }
 #planexp-dge-table-container { display: none; }
 
+
 .planexp-condition-selects { text-align: center; }
 
 #dge-table {
@@ -2151,9 +2152,11 @@ kbd {
 
 #select-dataset { display: none; }
 #planexp-gene-expression { display: none; }
+#planexp-sample-counter { display: none; }
 #planexp-gene-coexpression { display: none; }
 
 .gene-expression-search-container { width: 50%; }
+.counter-search-container { width: 50%; }
 
 #plot-container { 
     width: 100%; 
@@ -2209,6 +2212,23 @@ kbd {
     background-color: #f4f4f4; 
 }
 
+#counter-btns {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    overflow-x: scroll;
+    height: 250px; 
+    min-width: 700px; 
+    width: 100%;
+    background-color: #f4f4f4; 
+    margin-top: 20px;
+}
+
+#sample-count-link {
+    display: inline-block;
+}
+
 #volcano-plot {
     display: inline-block; 
     height: 500px; 
@@ -2224,6 +2244,9 @@ kbd {
     margin-top: 10px;
 }
 
+#counter-plot-container {
+    width: 100%;
+}
 
 
 .goea-plot {
@@ -2245,6 +2268,15 @@ kbd {
 }
 
 #tsne-plot-genenotfound {
+    display: none; 
+    margin: auto;
+    font-size: 18px;
+    padding: 8px;
+    width: 700px; 
+    background-color: #FDD4D4;  
+}
+
+#counter-plot-genenotfound {
     display: none; 
     margin: auto;
     font-size: 18px;
@@ -2286,6 +2318,26 @@ kbd {
     z-index: 2;
     left: calc(50% - 75px);
     margin-top: 175px;
+}
+
+#counter-plot-loading {
+    display: none;
+    position: absolute;
+    z-index: 2;
+    left: calc(50% - 75px);
+    margin-top: 75px;
+}
+
+.btn-sample-count {
+    height: 45px;
+    line-height: 45px;
+    margin-right: 10px;
+}
+
+.btn-sample-count span {
+    height: 26px !important;
+    width: 26px !important;
+    font-size: 20px;
 }
 
 #coexpression-plot-loading {
@@ -2377,6 +2429,7 @@ kbd {
 #planexp-links-toc { display: none; }
 #planexp-markers-toc { display: none; }
 #planexp-gene-coexpression-toc { display: none; }
+#planexp-sample-counter-toc { display: none; }
 
 
 #planexp-cyt { background-color: #f4f4f4; width: 100%; height: 720px;}
